# CooperativeResearchPlatform

./: .gitignore  .gitmodules  README.md
crp_APL/crp_msgs/: CMakeLists.txt  package.xml
crp_APL/crp_msgs/msg/: Behavior.msg  BehaviorLimits.msg  Ego.msg  EgoStatus.msg  PathWithTrafficRules.msg  PathWithTrafficRulesArray.msg  Scenario.msg  StopPose.msg  TargetSpace.msg  Test.msg  TrafficRule.msg  World.msg
crp_APL/ctrl_vehicle_control/: CMakeLists.txt  README.md  package.xml
crp_APL/ctrl_vehicle_control/inc/compensatory_model/: compensatory_model.hpp
crp_APL/ctrl_vehicle_control/inc/ctrl_vehicle_control/: controller_inputs.hpp
crp_APL/ctrl_vehicle_control/inc/lib/: utils.hpp
crp_APL/ctrl_vehicle_control/include/compensatory_model/: compensatory_model.hpp
crp_APL/ctrl_vehicle_control/include/ctrl_vehicle_control/: control_handler.hpp  controller_inputs.hpp  controller_outputs.hpp  ctrl_vehicle_control.hpp
crp_APL/ctrl_vehicle_control/include/lib/: polynomialCalculator.hpp
crp_APL/ctrl_vehicle_control/launch/: ctrl_vehicle_control.launch.py  mini_sim-launch.py  run_all.launch.py
crp_APL/ctrl_vehicle_control/mini_ctrl_sim/: lqr_speed_steer_control.py  mini_pid.py  ros_sim.py
crp_APL/ctrl_vehicle_control/scripts/: lqr_controller.py
crp_APL/ctrl_vehicle_control/src/: control_handler.cpp  ctrl_vehicle_control.cpp
crp_APL/ctrl_vehicle_control/src/compensatory_model/: compensatory_model.cpp
crp_APL/ctrl_vehicle_control/src/controller_cpp/: ctrl_vehicle_control.cpp
crp_APL/ctrl_vehicle_control/src/helper_nodes/: vehicle_model.cpp
crp_APL/ctrl_vehicle_control/src/lib/: polynomialCalculator.cpp  utils.cpp
crp_APL/motion_planning/: CMakeLists.txt  package.xml
crp_APL/plan_behavior_planning/: CMakeLists.txt  package.xml
crp_APL/plan_behavior_planning/include/plan_behavior_planning/: behaviorPlanner.hpp  missionPlanner.hpp
crp_APL/plan_behavior_planning/launch/: behavior_planning.launch.py
crp_APL/plan_behavior_planning/src/: behaviorPlanner.cpp  missionPlanner.cpp
crp_APL/plan_motion_planning/: CMakeLists.txt  package.xml
crp_APL/plan_motion_planning/include/plan_motion_planning/: motionHandler.hpp  motionPlanner.hpp
crp_APL/plan_motion_planning/launch/: motion_planning.launch.py
crp_APL/plan_motion_planning/src/: motionHandler.cpp  motionPlanner.cpp
crp_APL/prcp_situation_analysis/: CMakeLists.txt  package.xml
crp_APL/prcp_situation_analysis/include/prcp_situation_analysis/: egoFusion.hpp  inputFusion.hpp  scenarioFusion.hpp
crp_APL/prcp_situation_analysis/launch/: environmental_fusion.launch.py
crp_APL/prcp_situation_analysis/src/: egoFusion.cpp  inputFusion.cpp  scenarioFusion.cpp
crp_APL/prcp_situation_analysis/src/subfunctions/: poseCorrection.cpp
crp_APL/situation_analysis/: CMakeLists.txt  package.xml
crp_APL/test/: CMakeLists.txt  package.xml
crp_APL/test/include/testNode/: testNode.hpp
crp_APL/test/launch/: test_node.launch.py
crp_APL/test/src/: testNode.cpp
crp_CIL/cloud_filter/: CMakeLists.txt  package.xml
crp_CIL/cloud_filter/include/cloud_filter/: cloud_filter.h  point.h
crp_CIL/cloud_filter/src/: cloud_filter.cpp
crp_CIL/ekf_wrapper/: CMakeLists.txt  package.xml
crp_CIL/ekf_wrapper/include/ekf_wrapper/: ekfTopicConverter.hpp
crp_CIL/ekf_wrapper/launch/: ekfTopicConverter.launch.py
crp_CIL/ekf_wrapper/src/: ekfTopicConverter.cpp
crp_CIL/mpc_25_wrapper/: CMakeLists.txt  package.xml
crp_CIL/mpc_25_wrapper/include/mpc_25_wrapper/: mpc_25_wrapper.hpp
crp_CIL/mpc_25_wrapper/launch/: mpc_25_wrapper.launch.py
crp_CIL/mpc_25_wrapper/src/: mpc_25_wrapper.cpp
crp_CIL/novatel_gps_wrapper/: CMakeLists.txt  package.xml
crp_CIL/novatel_gps_wrapper/include/novatel_gps_wrapper/: novatelTopicConverter.hpp
crp_CIL/novatel_gps_wrapper/launch/: novatel.launch.py
crp_CIL/novatel_gps_wrapper/src/: novatelTopicConverter.cpp
crp_CIL/prcp_grid_cam/: CMakeLists.txt  package.xml
crp_CIL/prcp_grid_cam/launch/: prcp_grid_cam.launch.py
crp_CIL/prcp_grid_cam/src/: prcp_grid_cam_node.cpp
crp_CIL/prcp_sensor_abstraction/: CMakeLists.txt  package.xml
crp_CIL/prcp_sensor_abstraction/include/prcp_sensor_abstraction/: abstractionUtils.hpp  egoAbstraction.hpp  scenarioAbstraction.hpp  worldAbstraction.hpp
crp_CIL/prcp_sensor_abstraction/launch/: sensor_abstraction.launch.py
crp_CIL/prcp_sensor_abstraction/src/: abstractionUtils.cpp  egoAbstraction.cpp  scenarioAbstraction.cpp  worldAbstraction.cpp
crp_CIL/radar_pointcloud_processor/: CMakeLists.txt  package.xml
crp_CIL/radar_pointcloud_processor/include/radar_pointcloud_processor/: dopplerCompensator.hpp  pointcloudAggregator.hpp  pointcloudMerger.hpp
crp_CIL/radar_pointcloud_processor/launch/: dopplerCompensator.launch.py  pointcloudAggregator.launch.py  pointcloudMerger.launch.py
crp_CIL/radar_pointcloud_processor/src/: dopplerCompensator.cpp  pointcloudAggregator.cpp  pointcloudMerger.cpp
crp_VIL/actuator_control/: CMakeLists.txt  package.xml
crp_VIL/actuator_control/include/actuator_control/: actuator_control.hpp
crp_VIL/actuator_control/launch/: actuator_control.launch.py
crp_VIL/actuator_control/src/: actuator_control.cpp
crp_VIL/lanelet_handler/: CMakeLists.txt  README.md  package.xml
crp_VIL/lanelet_handler/include/lanelet_handler/: laneletFileLoader.hpp
crp_VIL/lanelet_handler/launch/: laneletFileLoader.launch.py
crp_VIL/lanelet_handler/src/: laneletFileLoader.cpp
crp_VIL/pacmod_extender/: CMakeLists.txt  README.md  package.xml
crp_VIL/pacmod_extender/launch/: pacmod_extender.launch.py
crp_VIL/pacmod_extender/src/: pacmodDefinitions.cpp  pacmodExtender.cpp
crp_VIL/scenario_generator/: CMakeLists.txt  package.xml
crp_VIL/scenario_generator/launch/: scenario_gen.launch.py
crp_VIL/scenario_generator/src/: scenarioGen.cpp
launch/crp_launcher/: CMakeLists.txt  package.xml
launch/crp_launcher/config/: ekf_duro.yaml  ekf_nova.yaml
launch/crp_launcher/launch/: core.launch.py  core_lqr.launch.py  core_pure_p.launch.py  core_stanley.launch.py  core_test.launch.py  golf.launch.py  lexus.launch.py  nissan.launch.py
(+453 files in other folders)
