<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plan_behavior_planning</name>
  <version>0.0.0</version>
  <description>Strategy and route planning</description>
  <maintainer email="jozsa.david@sze.hu">AnonymDavid</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>rclcpp</depend>
  <depend>crp_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>tier4_planning_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
