<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>situation_analysis</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jodavid512@gmail.com">david</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>crp_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>autoware_map_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>tier4_planning_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
