<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpc_25_wrapper</name>
  <version>0.0.0</version>
  <description>Wrapper for the MPC 2.5 Bosch camera signal interpretation</description>
  <maintainer email="gergo.igneczi@sze.hu">AnonymDavid</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tier4_planning_msgs</depend>>
  <depend>crp_if</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
