<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prcp_sensor_abstraction</name>
  <version>0.0.0</version>
  <description>Converts inputs to predefined abstract messages.</description>
  <maintainer email="jozsa.david@sze.hu">AnonymDavid</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_localization_msgs</depend>
  <depend>autoware_map_msgs</depend>
  <depend>tier4_planning_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>lanelet2_core</depend>
  <depend>autoware_lanelet2_extension</depend>
  <depend>crp_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
