<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>actuator_control</name>
  <version>0.0.0</version>
  <description>controls the low level actuators.</description>
  <maintainer email="jozsa.david@sze.hu">AnonymDavid</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>pacmod3_msgs</depend>
  <depend>crp_msgs</depend>
  <depend>autoware_control_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
