<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lanelet_handler</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jozsa.david@ga.sze.hu">AnonymDavid</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>autoware_map_msgs</depend>
  <depend>map_loader</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_io</depend>
  <depend>autoware_lanelet2_extension</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
