<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crp_launcher</name>
  <version>0.0.0</version>
  <description>Launchers for the CRP project.</description>
  <maintainer email="jozsa.david@sze.hu">AnonymDavid</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- common -->
  <depend>novatel_gps_launcher</depend>
  <depend>tf2_ros</depend>
  <depend>kvaser_interface</depend>
  <!-- nissan -->
  <depend>nissan_bringup</depend>
  <!-- lexus -->
  <depend>lexus_bringup</depend>
  <depend>pacmod3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
